[tool.poetry]
name = "PROJECT"
version = "0.1.0"
description = "Automation framework"
authors = ["Ram Mohan"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12.0"
pytest = "^7.4.3"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
allure-pytest = "^2.13.2"
openpyxl = "^3.1.2"
pytest-xdist = "^3.5.0"
# Add other dependencies as needed
requests = "2.28.2"


